Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-29944

Displacement transition does not always work for vertical views

    XMLWordPrintable

Details

    • b4673e69a0522fca9c592f1dab1734738b1443a8

    Description

      QML views, with negative x, and having a vertical orientation, the displacement does not always work. Depending on the actual geometry.
      Attached is an example demonstrating the bug.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              sletta Gunnar Sletta
              schwann Guenter Schwann
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes