Fix displacement transition bug for horizontal case

Task-number: QTBUG-29944

Change-Id: I23381f7a1d2c8d3c6df007b5b11c12b0db3bb1e9
Reviewed-by: Gunnar Sletta <gunnar.sletta@digia.com>