src/quick/items/qquickitemview.cpp
@@ -2117,7 +2117,7 @@ void QQuickItemViewPrivate::prepareVisibleItemTransitions()
         return;
 
     // must call for every visible item to init or discard transitions
-    QRectF viewBounds(0, position(), q->width(), q->height());
+    QRectF viewBounds(q->contentX(), q->contentY(), q->width(), q->height());
     for (int i=0; i<visibleItems.count(); i++)
         visibleItems[i]->prepareTransition(transitioner, viewBounds);
 }
